# music-box

./: .dockerignore  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CITATION.cff  CMakeLists.txt  Dockerfile  ModelRunnerDockerfile  README.md  SetDefaults.cmake  Tutorial.ipynb  config_options.md  datamolec_info.json  docker_push  getting_started.html  index.html  music_box_20241219_170915.csv  mySolution.csv  output.csv  package-lock.json  package.json  pyproject.toml  requirements.txt  tell_me_about_the_submodules.sh  test_output.csv  webpack.config.js
api/: index.html  (+1 more)
src/: CMakeLists.txt  README.md  analytical_test.py  box_model.cpp  box_model.py  chapman_test.py  component_factory.F90  config.F90  domain.F90  domain_factory.F90  emissions.F90  evolving_conditions.F90  initial_conditions.F90  io.F90  io_factory.F90  loss.F90  music_box.F90  music_box.cpp  music_box_conditions.py  music_box_core.F90  music_box_evolving_conditions.py  music_box_model_options.py  music_box_product.py  music_box_reactant.py  music_box_reaction.py  music_box_reaction_list.py  music_box_species.py  music_box_species_list.py  output.F90  output.csv  output_factory.F90  python_test_1.py  python_test_2.py  python_test_3.csv  python_test_3.py  setup.py  test_2_output.csv  test_config_1_out.csv  utils.py  wall_loss_test.csv  (+1 more)
src/acom_music_box/: __init__.py  acom_music_box.py  conditions.py  conditions_manager.py  configuration.py  constants.py  data_output.py  evolving_conditions.py  goBuild.bat  goMusicBox.bat  main.py  model_options.py  music_box.py  music_box_conditions.py  music_box_evolving_conditions.py  music_box_logger.py  music_box_main.py  music_box_model_options.py  music_box_product.py  music_box_reactant.py  music_box_reaction.py  music_box_reaction_list.py  music_box_reaction_rate.py  music_box_species.py  music_box_species_list.py  plot_output.py  reaction.py  reaction_list.py  species_concentration.py  species_list.py  utils.py
src/acom_music_box/connections/: electron_configuration_reader.py
src/acom_music_box/examples/: __init__.py  examples.py
src/acom_music_box/examples/configs/analytical/: initial_conditions.csv  my_config.json
src/acom_music_box/examples/configs/analytical/camp_data/: reactions.json  species.json
src/acom_music_box/examples/configs/carbon_bond_5/: initial_concentrations.csv  initial_conditions.csv  initial_reaction_rates.csv  my_config.json
src/acom_music_box/examples/configs/chapman/: conditions_Boulder.csv  initial_concentrations.csv  my_config.json
src/acom_music_box/examples/configs/flow_tube/: initial_concentrations.csv  initial_conditions.csv  initial_reaction_rates.csv  my_config.json
src/acom_music_box/examples/configs/ts1/: initial_conditions.csv  my_config.json
src/acom_music_box/examples/configs/waccm/: .gitignore
src/acom_music_box/tools/: destag.py  g_geoht.py  geckoAToMusicBox.py  goWaccm  gridUtils.py  waccmToMusicBox.py
src/components/: camp.F90  emissions.F90  loss.F90  micm.F90  partmc.F90
src/configs/chapman/: reactions.json  species.json
src/configs/test_config/camp_data/: reactions.json  species.json
src/configs/test_config_1/camp_data/: reactions.json
src/configs/test_config_2/: evolving_conditions.csv  my_config.json
src/configs/test_config_2/camp_data/: reactions.json  species.json
src/configs/test_config_3/camp_data/: reactions.json  species.json
src/configs/wall_loss_config/: my_config.json
src/domains/: cell.F90
src/ios/: netcdf.F90  netcdf_dimension.F90  netcdf_file.F90  netcdf_updater.F90  netcdf_variable.F90  text.F90
src/music_box/: CMakeLists.txt  __init__.py  music_box.py  music_box_evolving_conditions.py  music_box_species_list.py
src/music_box.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/outputs/: text.F90
src/util/: array.F90  assert.F90  constants.F90  convert.F90  datetime.F90  io.F90  iterator.F90  logger.F90  string.F90
test/: CMakeLists.txt  chapman_test.py  config.F90
test/data/: config_example.json  test_config.json
test/domains/: cell.F90
test/integration/input_use_cases/1/: config.json  expected_output.csv
test/integration/input_use_cases/1/camp_data/: config.json
test/integration/input_use_cases/2/: config.json  config_camp.json  expected_output_camp.csv  run_preprocessor.sh  run_preprocessor_camp.sh
test/integration/input_use_cases/3/: config.json  config_camp.json  expected_output.csv  expected_output_camp.csv
test/integration/input_use_cases/3/camp_data/: config.json
test/integration/input_use_cases/4/: config.json  config_b.json  config_camp.json  expected_output.csv  expected_output_camp.csv  run.sh  run_b.sh  run_b_preprocessed_data.sh
test/integration/input_use_cases/4/camp_data/: mechanism.json
test/integration/input_use_cases/5/: config.json  expected_output.csv  expected_output_camp.csv
test/integration/input_use_cases/5/camp_data/: mechanism.json
test/integration/input_use_cases/6/: config.json  config_camp.json  expected_output.csv  expected_output_camp.csv
test/integration/input_use_cases/6/camp_data/: mechanism.json  species.json
test/integration/input_use_cases/7/: config.json  expected_output.csv  expected_output_camp.csv
test/integration/input_use_cases/7/camp_data/: mechanism.json
test/integration/input_use_cases/7/etc/: parking_lot_photo_rates.cdl
test/integration/input_use_cases/8/: config.json  config_b.json  config_b_camp.json  config_camp.json  emit_all.csv  expected_b_output.csv  expected_b_output_camp.csv  expected_output.csv  expected_output_camp.csv  expected_preprocessed_output.csv  run.sh  run_b.sh  run_b_camp.sh  run_b_preprocessed_data.sh  run_b_preprocessor_camp.sh  run_preprocessed_data.sh
test/integration/input_use_cases/8/camp_data/: mechanism.json
test/integration/input_use_cases/9/: config.json  config_camp.json  expected_output.csv  run.sh
test/integration/input_use_cases/9/camp_data/: mechanism.json  species.json
test/test_common/: compare_results.c  output.F90
test/unit/: CMakeLists.txt  test_example.cpp
test/util/: array.F90  convert.F90  datetime.F90  string.F90
(+502 files in other folders)
