[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "acom_music_box"
authors = [
  { name = "Matthew Dawson", email = "mattdawson@ucar.edu" },
  { name = "Kyle Shores", email = "kshores@ucar.edu" },
  { name = "Andrew Conley", email = "aconley@ucar.edu" },
  { name = "Evan De la Garza"},
  { name = "Walker Drury"},
  { name = "Alexander Garza"},
  { name = "Brendan Fattig"},
  { name = "Carl Drews", email = "drews@ucar.edu" }
]
maintainers = [{ name = "ACOM MUSICA Developers", email = "musica-support@ucar.edu" }]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]

dependencies = [
  "musica==0.7.3"
]

[project.urls]
Home = "https://github.com/NCAR/music-box"

[project.scripts]
music_box = "acom_music_box.main:main"
