[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "acom_music_box"
authors = [
  { name = "Matthew Dawson", email = "mattdawson@ucar.edu" },
  { name = "Kyle Shores", email = "kshores@ucar.edu" },
  { name = "Andrew Conley", email = "aconley@ucar.edu" },
  { name = "Evan De la Garza"},
  { name = "Walker Drury"},
  { name = "Alexander Garza"},
  { name = "Brendan Fattig"},
  { name = "Carl Drews", email = "drews@ucar.edu" },
  { name = "Montek Thind"},
  { name = "Aditya Kiran"},
  { name = "Aidan Winney"},
  { name = "Angela Pak"}
]
maintainers = [{ name = "ACOM MUSICA Developers", email = "musica-support@ucar.edu" }]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]

dependencies = [
  "colorlog>=6.7.0",
  "matplotlib>=3.6.0",
  "mplcursors>=0.3",
  "musica>=0.13.0",
  "netcdf4>=1.6.0",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "tqdm>=4.64.0",
  "typing_extensions>=4.4.0",
  "xarray>=2022.3.0",
]

[project.urls]
Home = "https://github.com/NCAR/music-box"

[project.scripts]
music_box = "acom_music_box.main:main"
waccmToMusicBox = "acom_music_box.tools.waccmToMusicBox:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-mock>=3.15.0",
  "pytest-cov>=7.0.0"
]
gpu = [
  "musica[gpu]==0.13.0"
]